spec/test/parser/valid/literals_and_names/null_literal.java
protected class A {
  public A() {}
  protected A x = null;
}

