spec/test/parser/invalid/_custom/non_existing_escape.java
protected class A {
  public A() {}
  protected String x = "\z";
}

